feat: complete server-safe Fabric fluid transfer